feat(picuinhas): add frontend domain, backend CRUD and add card metadata on entries
